JumpScript/tests/baselines/reference/alwaysStrictES6.errors.txt
tests/cases/compiler/alwaysStrictES6.jump(2,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/alwaysStrictES6.jump (1 errors) ====
    function f() {
        var arguments = [];
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }